# cookiecutter-bessapypackage

./: LICENSE  README.md  cookiecutter.json  setup.cfg
hooks/: pre_gen_project.py
{{cookiecutter.pypi_package_name}}/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VERSION
{{cookiecutter.pypi_package_name}}/docs/source/: api.rst  conf.py  index.rst  readme.rst
{{cookiecutter.pypi_package_name}}/docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
