[metadata]
name = {{cookiecutter.pypi_package_name}}
version = file: VERSION
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = {{cookiecutter.project_keywords}}
url = https://github.com/{{cookiecutter.__gh_slug}}
license = BSD-3-Clause License
license_files = file: LICENSE
classifiers =
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:
include_package_data = True
python_requires = >={{cookiecutter.minimal_python_version}}
install_requires = file: requirements.txt


[options.packages.find]
where=src